Initial commit: DOT Affiliates Platform
